# htmx_contact

./: .gitignore  README.md  manage.py  pyproject.toml
contact/: api.py  forms.py  helpers.py  models.py  urls.py  views.py
contact/migrations/: 0001_initial.py  0002_alter_contact_email.py
contact/static/contact/js/: alert.js  overflow_menu.js
contact/templates/contact/: archive_ui.html  edit.html  email_errors.html  index.html  new.html  rows.html  show.html
htmx_contact/: api.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
static/css/: custom.css
templates/: 404.html  layout.html
